write nashorn to sai

--- a/web/ja/environment/setup/jdbcdriver.html
+++ b/web/ja/environment/setup/jdbcdriver.html
@@ -45,7 +45,8 @@
 		に配置して下さい。存在しない場合は、手動でディレクトリを作成して下さい。
 	</p>
 	<div class="relatedpage"><a href="../../manual/function/generator/client/index.html#extlib">DBFluteクライアント - extlib</a></div>
-<pre><span class="codetitle">e.g. DBFluteクライアントに ojdbc5.jar (Oracle)を配置</span><code>
+<pre><span class="codetitle">e.g. DBFluteクライアントに ojdbc5.jar (Oracle)を配置 @Directory</span><code>
+
 dbflute_exampledb
  |-dfprop
  |-<span class="point">extlib</span>
