--- a/web/ja/lastaflute/howto/startup/index.html
+++ b/web/ja/lastaflute/howto/startup/index.html
@@ -36,6 +36,12 @@
 		<dt>シングルプロジェクト</dt><dd><a href="./single.html">Startup as Single Project</a> <span class="frm">(Webアプリ一つだけ)</span></dd>
 		<dt>マルチプロジェクト</dt><dd><a href="./multi.html">Startup as Multi-Project</a> <span class="frm">(会員向けと管理側など、複数のアプリ)</span></dd>
 	</dl>
+
+	<h2 id="sincejava15">Java15以上を利用される方へ</h2>
+	<p>
+		FreeGenが実行できないので、startupの中でsaiへの移行をする必要があります。
+	</p>
+	<div class="detailpage"><a href="../upgrade/migration/lahorntosai.html">Nashornからsaiへの移行</a></div>
 <!-- __content-end__ --></div></div>
 
 <div id="sidebar">
