--- a/web/ja/lastaflute/howto/startup/multi.html
+++ b/web/ja/lastaflute/howto/startup/multi.html
@@ -193,6 +193,17 @@
 		もちろん、デフォルトのままでよければ、そのままでOKです。
 	</p>
 
+	<div class="inucolumn">
+		<h2 id="sincejava15">Java15以上を利用される方へ</h2>
+		<p>
+			FreeGenが実行できないので、saiへの移行をする必要があります。
+		</p>
+		<div class="detailpage"><a href="../upgrade/migration/lahorntosai.html">Nashornからsaiへの移行</a></div>
+		<p>
+			できれば意識せず解決できるようにしたいところですが、まだ道半ばです。
+		</p>
+	</div>
+
 	<h2 id="dbandgenerate">6. DB設計、そして自動生成</h2>
 	<h3 id="changedbms">もし、DBを MySQL から別のDBMSに変更するなら</h3>
 	<p>
