--- a/web/ja/lastaflute/howto/upgrade/migration/index.html
+++ b/web/ja/lastaflute/howto/upgrade/migration/index.html
@@ -46,6 +46,12 @@
 	</p>
 	<div class="detailpage"><a href="./ladoctolameta.html">lasta-docからlasta-metaへの移行</a></div>
 
+	<h2 id="nashornsai">Nashornからsaiへの移行</h2>
+	<p>
+		Java組み込みのJavaScriptエンジン Nashorn が Java15 から外れたので、Java15以降を利用される方は移行の必要があります。
+	</p>
+	<div class="detailpage"><a href="./lahorntosai.html">Nashornからsaiへの移行</a></div>
+
 	<h2 id="attention">移行ポイント</h2>
 	<p>
 		アップグレードする際は必ずご覧下さい。
