--- a/web/ja/lastaflute/howto/upgrade/migration/ladoctolameta.html
+++ b/web/ja/lastaflute/howto/upgrade/migration/ladoctolameta.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="Content-Style-Type" content="text/css" />
-	<meta name="keywords" content="DBFlute,チュートリアル,Tutorial,Deveploer,Architect" />
+	<meta name="keywords" content="LastaFlute,DBFlute" />
 	<style type="text/css" title="currentStyle">@import "../../../../../css/lasub.css";</style>
 	<title>lasta-docからlasta-metaへの移行 | LastaFlute</title>
 </head>
