about Lasta Di using sai as default

--- a/web/ja/lastaflute/howto/upgrade/migration/lahorntosai.html
+++ b/web/ja/lastaflute/howto/upgrade/migration/lahorntosai.html
@@ -213,6 +213,11 @@ dbflute_maihamadb
 &lt;/dependencies&gt;
 </code></pre>
 	<h3 id="lastadiprop">lasta_di.properties に sai を設定</h3>
+	<h4>Lasta Di-0.8.5 (LastaFlute-1.2.2) 以降なら</h4>
+	<p>
+		クラスパスに sai があれば sai を利用するので、lasta_di.properties の設定は不要です。
+	</p>
+	<h4>Lasta Di-0.8.4 (LastaFlute-1.2.1) までなら</h4>
 	<p>
 		lasta_di.properties に、dixml.script.managed.engine.nameプロパティを追加して、sai を設定しましょう。
 	</p>
