about sai and rhino

--- a/web/ja/lastaflute/howto/startup/multi.html
+++ b/web/ja/lastaflute/howto/startup/multi.html
@@ -222,7 +222,7 @@
 		コンパイルエラーになるところは適宜アプリにフィットさせていきましょう。さあ、ここから開発の始まりです。
 	</p>
 
-	<h2 id="java15sai">7. もし、Java15以降なら sai を</h2>
+	<h2 id="java15sai">7. もし、Java15以降なら Rhino を</h2>
 	<p>
 		もしJava15以上であれば、FreeGenの実行時に "JavaScript Engineが見つからなかった" エラーが発生するはずです。
 		<span class="frm">(Java15より、NashornがJava本体から外れたことによる影響です)</span>
