--- a/web/ja/lastaflute/howto/upgrade/migration/index.html
+++ b/web/ja/lastaflute/howto/upgrade/migration/index.html
@@ -51,7 +51,14 @@
 		Java組み込みのJavaScriptエンジン Nashorn が Java15 から外れたので、Java15以降を利用される方は移行の必要があります。
 	</p>
 	<div class="detailpage"><a href="./lahorntosai.html">Nashornからsaiへの移行</a></div>
-
+<!-- #pending
+	<h2 id="nashornrhino">NashornからRhinoへの移行</h2>
+	<p>
+		Java組み込みのJavaScriptエンジン Nashorn が Java15 から外れたので、Java15以降を利用される方は移行の必要があります。
+	</p>
+	<div class="detailpage"><a href="./lahorntorhino.html">NashornからRhinoへの移行</a></div>
+ -->
+ 
 	<h2 id="attention">移行ポイント</h2>
 	<p>
 		アップグレードする際は必ずご覧下さい。
