about version maangement for kvsflute

--- a/web/ja/manual/function/helper/kvsflute/index.html
+++ b/web/ja/manual/function/helper/kvsflute/index.html
@@ -96,6 +96,14 @@
 </code></pre>
 
 	<h2 id="setup">KVSFluteのセットアップ</h2>
+	<h3 id="download">KVSFluteのダウンロード</h3>
+	<p>
+		本家リポジトリのreleasesからzipファイルがダウンロードできます。
+	</p>
+	<dl class="valuemainlist">
+		<dt>本家のreleases</dt><dd><a href="https://github.com/dbflute-example/dbflute-example-with-non-rdb/releases">dbflute-example-with-non-rdb - releases</a></dd>
+	</dl>
+	<h3 id="howtouse">KVSFluteの使い方</h3>
 	<p>
 		KVSFluteの設定ファイルやExampleは、もろもろ dbflute-example-with-non-rdb リポジトリに入っています。
 		こちらを参考に環境構築をしていきましょう。
