--- a/web/ja/lastaflute/howto/upgrade/lachangelog.html
+++ b/web/ja/lastaflute/howto/upgrade/lachangelog.html
@@ -29,6 +29,26 @@
 	${indexlist}
 
       <div class="release">
+        <h2>LastaFlute-1.2.2</h2>
+        <p class="releas5date">2021/10/03</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>add getDefaultPath() to CookieManager for general purpose</li>
+            <li>improve doDetermineRestfulPath() by isIllegalResourceName()</li>
+            <li>cannot detect restful mapping in case of event-suffix of root resource without ID</li>
+            <li>making RESTish eventSuffixHyphenation of RestfulAction</li>
+            <li>[Lasta Di] support biz package and freedom interface mapping</li>
+            <li>[Lasta Di] change priority of JavaScript engine, sai->rhino->nashorn</li>
+            <li>[Lasta Di] can resolve org...Sea.class by plain hook</li>
+            <li>[Lasta Di] List from script engine should be always resolved cast (also for rhino)</li>
+            <li>[Lasta Job] make outlow parallel (for launchNow() only)</li>
+            <li>[Lasta Meta] Fixed the problem that the serialization has a decimal point...</li>
+            <li>[Lasta RemoteApi] HttpClientError exception can provide HTTP Method</li>
+          </ul>
+        </div>
+      </div>
+      <div class="release">
         <h2>LastaFlute-1.2.1</h2>
         <p class="releas5date">2021/08/17</p>
         <div class="new">
