improve DateFromTo exercise description

--- a/web/ja/tutorial/handson/section03.html
+++ b/web/ja/tutorial/handson/section03.html
@@ -152,9 +152,9 @@
 		<dt>[6] 2005年10月の1日から3日までに正式会員になった会員を検索</dt>
 		<dd>
 			<ul class="supplementlist">
-				<li>画面からの検索条件で2005年10月1日と2005年10月3日がリクエストされたと想定</li>
-				<li>Arrange で String の "2005/10/01", "2005/10/03" を一度宣言してから日時クラスに変換</li>
-				<li>時分秒は "00:00:00" になるようにして、(日付移動などせず)そのまま使って条件を設定</li>
+				<li>画面からの検索条件で2005年10月1日と2005年10月3日がリクエストされたと想定して...</li>
+				<li>Arrange で String の "2005/10/01", "2005/10/03" を一度宣言してから日時クラスに変換し...</li>
+				<li>自分で日付移動などはせず、DBFluteの機能を使って、そのままの日付(日時)を使って条件を設定</li>
 				<li>会員ステータスも一緒に取得</li>
 				<li>ただし、会員ステータス名称だけ取得できればいい (説明や表示順カラムは不要)</li>
 				<li>会員名称に "vi" を含む会員を検索</li>
