--- a/web/ja/lastaflute/howto/upgrade/lachangelog.html
+++ b/web/ja/lastaflute/howto/upgrade/lachangelog.html
@@ -29,6 +29,20 @@
 	${indexlist}
 
       <div class="release">
+        <h2>LastaFlute-1.2.3</h2>
+        <p class="releas5date">2021/12/17</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>add HTTP method determination to request parameter mapping for HTML</li>
+            <li>make temporaryRedirect() on ResponseManager</li>
+            <li>can return movedPermanently() directly in @Execute method</li>
+            <li>resolve #thinking order to keep same-value mapping between languages</li>
+            <li>resolve mismatch between failure client-message and UserMessage interface</li>
+          </ul>
+        </div>
+      </div>
+      <div class="release">
         <h2>LastaFlute-1.2.2</h2>
         <p class="releas5date">2021/10/03</p>
         <div class="new">
