DBFlute Engine: forcedly isSuppressRedundantCommentStop=true when LastaDoc

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,7 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: forcedly isSuppressRedundantCommentStop=true when LastaDoc<span class="frm">*12/19パッチ</span></li>
             <li>DBFlute Engine: ReplaceSchema, DataLoading error was shadowed by rollback error <span class="frm">*10/18パッチ</span></li>
             <li>DBFlute Engine: 'sai' task for FreeGen JavaScript <span class="frm">*08/29パッチ</span></li>
             <li>DBFlute Runtime: JavaPropertiesReader supports multiple line comments</li>
