--- a/web/ja/introduction/index.html
+++ b/web/ja/introduction/index.html
@@ -219,7 +219,7 @@
 		<a href="../../data/model/environment/dbflute-infrastructure-map.png" title="DBFluteのインフラマップ"><img src="../../data/model/environment/dbflute-infrastructure-map.png" alt="DBFluteのインフラマップ" width="550" height="360" /></a>
 	</p>
 
-	<h2 id="thanksframework">Thanks, Frameworks!</h2>
+	<h2 id="thanksframeworks">Thanks, Frameworks!</h2>
 	<h3 id="codeuse">コード利用のフレームワーク</h3>
 	<p>
 		DBFluteの実装でコード利用させてもらってるフレームワークです。
@@ -260,6 +260,9 @@
 	<h3 id="bigthanks">最大の感謝</h3>
 	<p>
 		これらのフレームワーク/ライブラリがなければ、今の DBFlute は存在していないでしょう。
+	</p>
+	<p>
+		コミッターのみなさんに感謝、ありがとうございます。
 	</p>
 
 	<h2 id="thanksfriends">Thanks, Friends!</h2>
