add JDBC driver and sai to thanksframeworks

--- a/web/ja/introduction/index.html
+++ b/web/ja/introduction/index.html
@@ -247,6 +247,10 @@
 		<li><a href="https://ant.apache.org	">Apache Ant</a> <span class="frm">(also module use)</span></li>
 		<li><a href="http://db.apache.org/torque/">Apache Torque</a> <span class="frm">(code use)</span></li>
 		<li><a href="https://junit.org">JUnit</a> <span class="frm">(test only)</span></li>
+		<li><a href="https://www.h2database.com">H2 Database (as JDBC Driver)</a> <span class="frm">(embedded)</span></li>
+		<li><a href="https://github.com/mysql/mysql-connector-j">MySQL Connector/J (JDBC Driver)</a> <span class="frm">(embedded)</span></li>
+		<li><a href="https://jdbc.postgresql.org">PostgreSQL JDBC Driver</a> <span class="frm">(embedded)</span></li>
+		<li><a href="https://github.com/codelibs/sai">sai (JavaScript Engine)</a> <span class="frm">(downloaded by sai task)</span></li>
 	</ul>
 	<p>
 		DBFlute Runtimeが依存しているライブラリです。
