--- a/web/ja/manual/function/generator/intro/index.html
+++ b/web/ja/manual/function/generator/intro/index.html
@@ -59,6 +59,7 @@
 		以下のようにリリースされています。
 	</p>
 	<dl class="shortkeymainlist">
+		<dt>2022/01/01</dt><dd><em class="mark">0.5.0</em> :: SchemaPolicyCheck画面のUI改善</dd>
 		<dt>2021/05/01</dt><dd><em class="mark">0.4.0</em> :: SchemaPolicyCheck画面のデザイン修正</dd>
 		<dt>2021/01/01</dt><dd><em class="mark">0.3.11</em> :: ReplaceSchema画面にボタン追加、全体デザインの微修正</dd>
 		<dt>2020/02/21</dt><dd><em class="mark">0.3.10</em> :: AlterCheck時に、最新のzipファイルを利用しない不具合を修正</dd>
