change to (control+) shift + command + @

--- a/web/ja/manual/topic/friends/eclipse/shortcut/keys.html
+++ b/web/ja/manual/topic/friends/eclipse/shortcut/keys.html
@@ -58,7 +58,7 @@
 			<dt><em class="mark">Search結果を開く</em></dt><dd>shift + command + - (ほ) <span class="frm">:: Show in (Search)</span></dd>
 			<dt><em class="mark">Problemsを開く</em></dt><dd>shift + command + ^ (へ) <span class="frm">:: Show in (Problems)</span></dd>
 			<dt><em class="mark">Tasksを開く</em></dt><dd>shift + command + ¥ (|) <span class="frm">:: Show in (Tasks)</span></dd>
-			<dt><em class="mark">Perspectiveを行き来</em></dt><dd>shift + command + @ <span class="frm">:: Next Perspective</span></dd>
+			<dt><em class="mark">Perspectiveを行き来</em></dt><dd>(control+) shift + command + @ <span class="frm">:: Next Perspective</span></dd>
 			<dt><em class="mark">Cleanコンパイル</em></dt><dd>alt + B <span class="frm">:: Clean</span></dd>
 			<dt><em class="mark">アプリの実行</em></dt><dd>control + R <span class="frm">:: Run</span></dd>
 			<dt><em class="mark">mainメソッドの実行</em></dt><dd>command + 8 <span class="frm">:: Run Java Application</span></dd>
